[gd_scene load_steps=3 format=3 uid="uid://bo1lbs5min2nf"]

[ext_resource type="Script" uid="uid://dsrucd22iq68w" path="res://Art/TechArt/throw_away_block.gd" id="1_733rh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0no2i"]
size = Vector2(60, 20)

[node name="ThrowAwayBlock" type="RigidBody2D"]
collision_layer = 8
collision_mask = 8
script = ExtResource("1_733rh")

[node name="TextureRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -10.0
offset_right = 35.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5, 0)
shape = SubResource("RectangleShape2D_0no2i")

[node name="Lifetime" type="Timer" parent="."]
process_callback = 0
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="timeout" from="Lifetime" to="." method="_on_lifetime_timeout"]
